<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Random Swoop</string>
    <string name="makememe_voice_trigger">can you make me a meme?</string>
    <string name="add_top_caption">Add Top Caption</string>
    <string name="add_bottom_caption">Add Bottom Caption</string>
    <string name="add_caption">Add Caption</string>
    <string name="picture_path">picture_path</string>
    <string name="top_caption_string">top_caption_string</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="meme_path">meme_path</string>
    <string name="show_results">Results</string>
    <string name="delete_card">Delete</string>
    <string name="intro_text">Nice picture! Go on. Add your captions..</string>
    <string name="memeBroadcast">meme_broadcast</string>
    <string name="live_card_message">Busy uploading meme to Imgur. This card will be updated with URL</string>

    <!-- Main Screen Strings -->
    <string name="forget_9000">It\'s over 9,000,000,000,000 random possibilities!</string>
    <string name="something_close">Or something close to that.</string>
    <string name="main_instructions">Tap on the glasses to load a random feed.</string>

    <item name="top_caption_prompt" type="id">say top caption</item>
    <item name="bottom_caption_prompt" type="id">say bottom caption</item>

    <string name="action_about">AboutDialog</string>
    <string name="about_dialog">About Random Swoop</string>
    <string name="action_settings">Settings</string>
    <string name="loading_menu_title">You sure shook things up!</string>
    <string name="image_description">dizzy_bird_yo</string>

    <color name="Red">#FF0000</color>
    <color name="White">#FFFFFF</color>

    <!-- Preference strings -->
    <string name="pref_title_file">pref_general</string>
    <string name="pref_default_name">Enter Name</string>
    <string name="pref_title_name">Display Name</string>
    <string name="pref_title_sites">Sites to Choose From</string>

    <!-- Difficulty Strings -->
    <string name="website_option1">Memestache (Memes)</string>
    <string name="website_option2">Imagur (Images)</string>
    <string name="website_option3">www.cheezburger.com (Images)</string>
    <string name="website_option4">knowyourmeme.com (Trending)</string>
    <string name="website_option5">Reddit (Threads)</string>
    <string name="website_option6">Quickmeme.com (Memes)</string>
    <string name="website_option7">memes.com (Memes)</string>
    <string name="website_option8">FunCage (Images)</string>
    <string name="website_option9">Ohnorobot.com (Comics)</string>
    <string name="website_option10">Fatpita (Images)</string>
    <!-- <string name="website_option10">FunCage</string> -->

    <string-array name="settings_array">
        <item>Name</item>
        <item>Websites</item>
    </string-array>

    <!-- About strings -->
    <string name="about_wtf">You may be wondering what this app is... </string>
    <string name="about_mission">The goal of this app is to make all of the best 
        memes and happenings on the internet randomly available to you in the corner of your eye!
        A unique feed from one of the most popular sites will be randomly selected every time you shake
          your device (or touch the button). These sites can be customized from the settings menu.
           Say goodbye to boredom! #Swoop </string>
    <string name="about_authors">Random Swoop was created by: </string>
    <string name="about_author1">James Dagres</string>
    <string name="about_contact">If you have any questions you can contact me at jdagres@vt.edu</string>
    <string name="about_qoute">“I” 
		― Metro Station</string>

</resources>